# trustcore

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  BUILD.md  CMakeLists.txt  EOL_POLICY.md  GUIDE.md  LICENSE  README.md  SECURITY.md
projects/asn1/: CMakeLists.txt  build.bat  build.sh  clean.bat  mocana_ci_flags.txt  mocana_flags.txt  mss_includes.txt  mss_sources.txt  mss_win_data_sources.txt
projects/asn1_unittest/: .gitignore  CMakeLists.txt  CTestCustom.cmake  build.bat  build.sh  build64.bat  clean.bat  flags.txt  main.c  run.sh  test_sources.txt
projects/cert_enroll/: CMakeLists.txt  build.bat  build.sh  clean.bat  mocana_flags.txt  mss_includes.txt
projects/common/: CMakeLists.txt  build.bat  build.sh  clean.bat  mocana_ci_flags.txt  mocana_debug_forward_flags.txt  mocana_flags.txt  mocana_lookup_table_flags.txt  mocana_mem_profile_flags.txt  mocana_mem_profile_flags_vxworks.txt  mocana_mempart_tpla_flags.txt  mocana_mempart_tpla_flags_32.txt  mocana_vlong_flags.txt  mss_includes.txt  mss_mem_profile_sources.txt  mss_osi_sources.txt  mss_sources.txt  mss_win_sources.txt
projects/crypto/: CMakeLists.txt  build.bat  build.sh  clean.bat
projects/crypto_interop_test/: .gitignore  CMakeLists.txt  build.sh  clean.sh  crypto_sources.txt  defs.txt  flags.txt  run.sh  test_sources.txt
projects/crypto_perf_test/: .gitignore  BUILD.md  CMakeLists.txt  RUN.md  build.sh  ci_flags.txt  defs.txt  flags.txt  liboqs_flags.txt  liboqs_test_sources.txt  oqs_flags.txt  run.sh  test_sources.txt  wolf_flags.txt  wolf_test_sources.txt
projects/crypto_unittest/: .gitignore  BUILD.md  CMakeLists.txt  RUN.md  build.bat  build.sh  build64.bat  clean.bat  flags.txt  run.sh  sub_set_65.txt  sub_set_cap.txt  test_sources.txt
projects/cryptointerface_unittest/: BUILD.md  CMakeLists.txt  RUN.md  alg_sizes.sh  build.bat  build.cmake  build.sh  build_and_run_all.sh  clean.bat  clean.cmake  clean.sh  code_coverage.sh  cryptointerface_flags.txt  defs.cmake  hw_sim_flags.txt  mbed_flags.txt  mss_flags.txt  oqs_flags.txt  run.cmake  run.sh  run_valgrind.sh  tap_flags.txt  test_sources.txt
projects/digiprov_test/: CMakeLists.txt  build.bat  build.cmake  build.sh  clean.bat  clean.sh  mocana_flags.txt  mss_includes.txt  mss_sources.txt  version.txt
projects/est_testunit/: CMakeLists.txt  README.md  build.sh  mocana_flags.txt  run.sh
projects/initialize/: CMakeLists.txt  build.bat  build.sh  clean.bat  mocana_ci_flags.txt  mocana_flags.txt  mocana_mempart_flags.txt  mss_includes.txt  mss_sources.txt
projects/moctee_tools/: CMakeLists.txt  build.sh  clean.sh  cmakeflags.txt  cmakefunctions.txt
projects/moctpm2_tools/: CMakeLists.txt  build.bat  build.sh  clean.bat  clean.sh  cmakeflags.txt  cmakefunctions.txt  digicert_data_protect_flags.txt  digicert_debug_flags.txt  digicert_suiteb_flags.txt  digicert_tap_local_flags.txt
projects/mqtt_client/: CMakeLists.txt  build.bat  build.sh  clean.bat  clean.sh  mocana_async_flags.txt  mocana_debug_flags.txt  mocana_flags.txt  mocana_library_flags.txt  mocana_persist_flags.txt  mocana_pqc_flags.txt  mocana_proxy_flags.txt  mocana_ssl_flags.txt  mocana_streaming_flags.txt  mocana_test_flags.txt  mss_includes.txt
projects/mqtt_testunit/: BUILD_RUN.md  CMakeLists.txt  mocana_flags.txt  run.sh
projects/nanocert/: CMakeLists.txt  build.bat  build.sh  clean.bat  mocana_cert_blob_extract_flags.txt  mocana_cert_flags.txt  mocana_ci_flags.txt  mocana_fips.txt  mocana_flags.txt  mocana_scram_flags.txt  mocana_serialize_flags.txt  mss_includes.txt  mss_sources.txt  mss_win_sources.txt
projects/nanosec/: CMakeLists.txt  build.bat  build.sh  clean.bat  clean.sh  mocana_debug_flags.txt  mocana_dual_mode_flags.txt  mocana_eap_flags.txt  mocana_eap_server_flags.txt  mocana_eap_supplicant_flags.txt  mocana_export_flags.txt  mocana_export_suiteb_flags.txt  mocana_flags.txt  mocana_gdoi_flags.txt  mocana_ipsec_flags.txt  mocana_ipv6_flags.txt  mocana_mcp_flags.txt  mocana_pqc_flags.txt  mocana_suiteb_flags.txt  mocana_tap_flags.txt  mocana_tap_remote_flags.txt  mocana_tls_eap_auth_flags.txt  mss_eap_sources.txt  mss_includes.txt  mss_ipsec_sources.txt  mss_mcp_sources.txt  mss_radius_sources.txt  mss_sources.txt  mss_ssl_sources.txt  mss_vx_mcp_sources.txt  mss_win_mcp_sources.txt
projects/nanossh/: CMakeLists.txt  cmakeflags.txt  mocana_chachapoly_flags.txt  mocana_debug_flags.txt  mocana_export_suiteb_flags.txt  mocana_suiteb_flags.txt  mocana_tap_local_flags.txt  mocana_tap_remote_flags.txt
projects/nanossh_testunit/: BUILD_RUN.md  CMakeLists.txt  mocana_flags.txt  run.sh
projects/nanossl_unittest/: CMakeLists.txt  README.txt  build_tap_local.sh  test.sh
projects/nanotap2/: CMakeLists.txt  build.bat  build.sh  clean.bat  clean.sh  cmakeflags.txt  cmakefunctions.txt  mocana_nanoroot_flags.txt  mocana_tap_extern_flags.txt  mocana_tap_local_flags.txt  mocana_tap_min_flags.txt  mocana_tpm12_flags.txt
projects/nanotap2_common/: CMakeLists.txt  build.bat  build.sh  clean.bat  clean.sh  cmakeflags.txt  cmakefunctions.txt  mocana_flags.txt  mocana_smp_pkcs11_flags.txt  mocana_suiteb_flags.txt  mocana_tap_min_flags.txt  mocana_tee_flags.txt  mocana_tpm2_flags.txt  mss_includes.txt  mss_sources.txt  mss_tap_remote_sources.txt
projects/nanotap2_configparser/: CMakeLists.txt  build.bat  build.sh  clean.bat  clean.sh  cmakeflags.txt  mocana_flags.txt  mss_includes.txt  mss_sources.txt
projects/platform/: CMakeLists.txt  build.bat  build.sh  clean.bat  mocana_mpart_flags.txt  mss_includes.txt  mss_osi_sources.txt  mss_process_sources.txt  mss_signal_sources.txt  mss_sources.txt  mss_term_sources.txt
projects/scep_testunit/: CMakeLists.txt  README.md  build.sh  clean.sh  mocana_flags.txt  run.sh
projects/smp_nanoroot/: CMakeLists.txt  build.sh  clean.sh  cmakeflags.txt  mocana_debug_flags.txt  mocana_flags.txt  mocana_suiteb_flags.txt  mss_includes.txt  mss_sources.txt
projects/smp_nanoroot_unittest/: CMakeLists.txt  README.md  run_unit_tests.sh
projects/smp_pkcs11/: CMakeLists.txt  build.sh  cmakeflags.txt  mocana_cloudhsm_flags.txt  (+4 more)
(+4211 files in other folders)
